crates/uitest/fixtures/parser/extern_.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/extern_.fe
---
error[1-0001]: only `fn` is allowed in this block
  ┌─ extern_.fe:4:5
  │
4 │     struct Foo {
  │     ^^^^^^ only `fn` is allowed in this block

error[1-0001]: expected name for field
  ┌─ extern_.fe:6:8
  │
6 │     pub unsafe fn foo()
  │        ^ expected identifier

error[1-0001]: unexpected syntax while parsing function definition
  ┌─ extern_.fe:7:1
  │
7 │ }
  │ ^ unexpected


